# Base64Encoder

./: Base64Encode.cpp  Base64Encode.h  CMakeLists.txt  LICENSE  main.cpp
Dependencies/: BitBuffer.cpp  BitBuffer.h  Constants.h
Tests/: ModuleTest.cpp  ModuleTest.h
